--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 <img src="src/images/ronnie-colleman-food.webp" alt="Banner Food">
             </div>
         </section>
+
+        <section id="menu"></section>
     </main>
      
     <script src="src/javaScript/script.js"></script>
