Added images to files

--- a/index.html
+++ b/index.html
@@ -112,7 +112,20 @@
             </div>
         </section>
 
-        <section id="menu"></section>
+        <section id="menu">
+            <h2 class="section-title"> Cardápio</h2>
+            <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+            <div id="dishes">
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa solid fa-heart"></i>
+                    </div>
+
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
     </main>
      
     <script src="src/javaScript/script.js"></script>
