--- a/index.html
+++ b/index.html
@@ -119,10 +119,92 @@
             <div id="dishes">
                 <div class="dish">
                     <div class="dish-heart">
-                        <i class="fa solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="" alt="">
+                    <img src="src/images/dish.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        Lorem ipsum
+                    </h3>
+
+                    <span class="dish-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 70,00</h4>
+                    </div>
+                    <button class="btn_default">
+                        <i class="fa-solid fa-basket-shopping"></i>
+                    </button>
+                </div>
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/images/dish2.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        Lorem ipsum
+                    </h3>
+
+                    <span class="dish-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 8,00</h4>
+                    </div>
+                    <button class="btn_default">
+                        <i class="fa-solid fa-basket-shopping"></i>
+                    </button>
+                </div>
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/images/dish4.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        Lorem ipsum
+                    </h3>
+
+                    <span class="dish-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(387)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 28,00</h4>
+                    </div>
+                    <button class="btn_default">
+                        <i class="fa-solid fa-basket-shopping"></i>
+                    </button>
                 </div>
             </div>
         </section>
